--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
-.vscode/
+# ### VS Code ###
+# .vscode/
+
+### APPLE ###
+.DS_Store
