--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -31,13 +31,13 @@ server:
   # CHANGE LOGGING LEVEL
 logging:
   level:
-    root: info
+    root: debug
     org:
       hibernate:
         SQL: debug
         orm:
           jdbc:
-            bind: info
+            bind: debug
 minio:
   url: http://s3.bivala.com
   access-key: EYWZ3CJB4LTXS5UGF9SN
