--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-form": "^1.23.8",
+    "@tanstack/react-query": "^5.90.9",
     "@tanstack/react-router": "^1.135.0",
     "@tanstack/react-router-devtools": "^1.135.0",
     "@tanstack/react-table": "^8.21.3",
